--- a/finalProject2 2/app/src/main/res/layout/activity_generaltv_shows.xml
+++ b/finalProject2 2/app/src/main/res/layout/activity_generaltv_shows.xml
@@ -12,16 +12,17 @@
         android:layout_width="406dp"
         android:layout_height="48dp"
         android:background="#9EEDE9"
-        android:text="     General TV Shows"
         android:fontFamily="monospace"
+        android:text="     General TV Shows"
         android:textColor="@android:color/black"
         android:textSize="25dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintVertical_bias="0.004" />
 
     <TextView
         android:id="@+id/Facts4tvshowsDisplay"
@@ -30,6 +31,7 @@
         android:layout_marginTop="108dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
+        android:textSize="20dp"
         android:text="facts display"
         android:fontFamily="monospace"
         android:textColor="@android:color/white"
@@ -42,11 +44,12 @@
         android:layout_height="71dp"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="36dp"
         android:background="#C17DEA"
         android:fontFamily="monospace"
-        android:textColor="@android:color/black"
         android:text="I NEED ANOTHER HINT"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Facts4tvshowsDisplay" />
 
@@ -56,11 +59,12 @@
         android:layout_height="71dp"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="20dp"
         android:background="#C17DEA"
         android:fontFamily="monospace"
-        android:textColor="@android:color/black"
         android:text="guess show"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/moreHintsShowsbtn" />
 
@@ -70,11 +74,12 @@
         android:layout_height="71dp"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="20dp"
         android:background="#C17DEA"
         android:fontFamily="monospace"
-        android:textColor="@android:color/black"
         android:text="give up"
+        android:textColor="@android:color/black"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guessShowbtn" />
 
@@ -84,10 +89,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="280dp"
         android:ems="10"
+        android:hint="guess show"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:textColor="@android:color/white"
+        android:textColorHint="#B1AFAF"
         android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -96,7 +103,7 @@
         android:id="@+id/submit2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="296dp"
+        android:layout_marginTop="280dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
         android:text="SUBMIT"
